--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,28 @@
-<h2>Sign up</h2>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
-  <%= f.error_notification %>
-  <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :required => true %>
-  <%= f.input :password_confirmation, :required => true %>
-  <%= f.button :submit, 'Sign up', :class => 'btn-primary' %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical', :role => 'form'}) do |f| %>
+    <h2>Sign up</h2>
+    <%= f.error_notification %>
+    <%= display_base_errors resource %>
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, :autofocused => true, :required => true, :class => 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.text_field :email, :required => true, :class => 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :password %>
+      <%= f.text_field :password, :required => true, :class => 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :password_confirmation, "Password Confirmation" %>
+      <%= f.text_field :password_confirmation, :required => true, :class => 'form-control' %>
+    </div>
+    <%= f.button :submit, 'Sign up', :class => 'btn-default' %>
+    <div class="below-submit">
+      <%= link_to "Sign in", new_session_path(resource_name) %>
+      <br/>
+    </div>
 <% end %>
-<%= render "devise/shared/links" %>
+
+
