--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,7 +31,7 @@
             </li>
         <% else %>
             <li>
-              <%= link_to 'Login', new_user_session_path %>
+              <%= link_to 'Login', new_user_session_path, :class => 'scroll brand-4' %>
             </li>
         <% end %>
         <% if user_signed_in? %>
@@ -45,7 +45,7 @@
             <% end %>
         <% else %>
             <li>
-              <%= link_to 'Sign up', new_user_registration_path %>
+              <%= link_to 'Sign up', new_user_registration_path, :class => 'scroll brand-4' %>
             </li>
         <% end %>
       </ul>
