--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -280,4 +280,10 @@ $.history.push($(this).attr('href'));
 });
 </script>
 
+<script>
+    setTimeout(function() {
+        $("#flash_notice").fadeOut().empty();
+    }, 2000);
+</script>
+
 
