--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,19 +4,19 @@
     <%= display_base_errors resource %>
     <div class="form-group">
       <%= f.label :name %>
-      <%= f.text_field :name, :autofocused => true, :required => true, :class => 'form-control' %>
+      <%= f.text_field :name, :autofocused => true, :placeholder => "John Doe", :required => true, :class => 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
-      <%= f.text_field :email, :required => true, :class => 'form-control' %>
+      <%= f.text_field :email, :required => true, :placeholder => "example@mail.com", :class => 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :password %>
-      <%= f.text_field :password, :required => true, :class => 'form-control' %>
+      <%= f.text_field :password, :required => true, :placeholder => "Password", :class => 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :password_confirmation, "Password Confirmation" %>
-      <%= f.text_field :password_confirmation, :required => true, :class => 'form-control' %>
+      <%= f.text_field :password_confirmation, :required => true, :placeholder => "Re-Enter Password", :class => 'form-control' %>
     </div>
     <%= f.button :submit, 'Sign up', :class => 'btn-default' %>
     <div class="below-submit">
