--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -27,7 +27,7 @@
 
         <% if user_signed_in? %>
             <li>
-              <%= link_to 'Logout', destroy_user_session_path, :method => 'delete' %>
+              <%= link_to 'Logout', destroy_user_session_path, :method => 'delete', :class => 'scroll brand-4' %>
             </li>
         <% else %>
             <li>
@@ -36,11 +36,11 @@
         <% end %>
         <% if user_signed_in? %>
             <li>
-              <%= link_to 'Edit account', edit_user_registration_path %>
+              <%= link_to 'Edit account', edit_user_registration_path, :class => 'scroll brand-4' %>
             </li>
             <% if current_user.has_role? :admin %>
                 <li>
-                  <%= link_to 'Admin', users_path %>
+                  <%= link_to 'Admin', users_path, :class => 'scroll brand-4' %>
                 </li>
             <% end %>
         <% else %>
