--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,7 +36,7 @@
         <% end %>
         <% if user_signed_in? %>
             <li>
-              <%= link_to 'Edit account', edit_user_registration_path, :class => 'scroll brand-4' %>
+              <%= link_to 'Management', edit_user_registration_path, :class => 'scroll brand-4' %>
             </li>
             <% if current_user.has_role? :admin %>
                 <li>
