--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,18 +1,70 @@
+<div class="edit-window">
 
-<div class = "edit-window">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put, :class => 'form-vertical'}) do |f| %>
-    <%= f.error_notification %>
-    <%= display_base_errors resource %>
-    <%= f.input :name, :autofocus => true %>
-    <%= f.input :email, :required => true %>
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
-    <%= f.button :submit, 'Update', :class => 'btn-primary' %>
-<% end %>
-<h3>Cancel my account</h3>
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => {:confirm => "Are you sure?"}, :method => :delete %>
-  .</p>
-<%= link_to "Back", :back %>
+  <%= simple_form_for(resource,:class =>"clickable", :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put, :class => 'form-expandable'}) do |f| %>
+  <h4 class="expanderHead"><span class="expanderSign" style="cursor:pointer;">[+]</span> Update My Information</h4>
+  <div class="expanderContent">
+        <%= f.error_notification %>
+        <%= display_base_errors resource %>
+
+        <%= f.label :name %>
+        <%= f.text_field :name, :autofocused => true, :class => 'form-control', :id => 'expand-form' %>
+
+        <%= f.label :email %>
+        <%= f.text_field :email, :class => 'form-control', :id => 'expand-form' %>
+
+        <%= f.label :password %>
+        <%= f.text_field :password, :class => 'form-control', :id => 'expand-form', :autocomplete => "off", :hint => "Leave Blank if You Don't Want to Change It", :required => false %>
+
+        <%= f.label :password_confirmation %>
+        <%= f.text_field :password_confirmation, :class => 'form-control', :id => 'expand-form', :required => false %>
+
+        <%= f.label :current_password %>
+        <%= f.text_field :current_password, :class => 'form-control', :id => 'expand-form', :hint => "We Need Your Current Password To Confirm Your Changes", :required => true %>
+
+        </br>
+        <%= f.button :submit, 'Update', :class => 'btn-primary' %>
+  </div>
+  <% end %>
+
+  <%= simple_form_for(resource,:class =>"clickable", :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put, :class => 'form-expandable'}) do |f| %>
+      <h4 class="expanderHead"><span class="expanderSign" style="cursor:pointer;">[+]</span> Update My Information</h4>
+      <div class="expanderContent">
+        <%= f.error_notification %>
+        <%= display_base_errors resource %>
+
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name, :autofocused => true, :class => 'form-control', :id => 'expand-form' %>
+
+        <%= f.label :email %>
+        <%= f.text_field :email, :class => 'form-control', :id => 'expand-form' %>
+
+        <%= f.label :password %>
+        <%= f.text_field :password, :class => 'form-control', :id => 'expand-form', :autocomplete => "off", :hint => "Leave Blank if You Don't Want to Change It", :required => false %>
+
+        <%= f.label :password_confirmation %>
+        <%= f.text_field :password_confirmation, :class => 'form-control', :id => 'expand-form', :required => false %>
+
+        <%= f.label :current_password %>
+        <%= f.text_field :current_password, :class => 'form-control', :id => 'expand-form', :hint => "We Need Your Current Password To Confirm Your Changes", :required => true %>
+
+        </br>
+        <%= f.button :submit, 'Update', :class => 'btn-primary' %>
+      </div>
+  <% end %>
+
+  <div class = 'form-expandable'>
+  <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => {:confirm => "Are you sure?"}, :method => :delete %>
+    .</p>
+  <%= link_to "Back", :back %>
+  </div>
 </div>
+
+<!-- expand and collaps -->
+<script>
+$(".expanderContent").hide();
+$(".expanderSign").on('click', function () {
+$(this).text($(this).text() == '[+]' ? '[-]' : '[+]');
+$(this).parent().next("div").toggle('slow');
+});
+</script>
+
