--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,8 +32,8 @@
         <%= f.error_notification %>
         <%= display_base_errors resource %>
 
-        <%= f.label :first_name %>
-        <%= f.text_field :first_name, :autofocused => true, :class => 'form-control', :id => 'expand-form' %>
+        <%= f.label :name %>
+        <%= f.text_field :name, :autofocused => true, :class => 'form-control', :id => 'expand-form' %>
 
         <%= f.label :email %>
         <%= f.text_field :email, :class => 'form-control', :id => 'expand-form' %>
