Error with Management

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,11 +36,12 @@
         <% end %>
         <% if user_signed_in? %>
             <li>
-              <%= link_to 'Management', edit_user_registration_path, :class => 'scroll brand-4' %>
+              <%= link_to 'My Account', edit_user_registration_path, :class => 'scroll brand-4' %>
             </li>
             <% if current_user.has_role? :admin %>
                 <li>
                   <%= link_to 'Admin', users_path, :class => 'scroll brand-4' %>
+                  <%= link_to 'Management', managements_path, :class => 'scroll brand-4' %>
                 </li>
             <% end %>
         <% else %>
