--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,11 +12,11 @@
     </div>
     <div class="form-group">
       <%= f.label :password %>
-      <%= f.text_field :password, :required => true, :placeholder => "Password", :class => 'form-control' %>
+      <%= f.text_field :password, :type => 'password', :required => true, :placeholder => "Password", :class => 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :password_confirmation, "Password Confirmation" %>
-      <%= f.text_field :password_confirmation, :required => true, :placeholder => "Re-Enter Password", :class => 'form-control' %>
+      <%= f.text_field :password_confirmation, :type => 'password', :required => true, :placeholder => "Re-Enter Password", :class => 'form-control' %>
     </div>
     <%= f.button :submit, 'Sign up', :class => 'btn-default' %>
     <div class="below-submit">
