--- a/app/views/caretakers/_form.html.erb
+++ b/app/views/caretakers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @caretaker do |f| %>
+<%= simple_form_for(@caretaker) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
