--- a/app/views/managements/index.html.erb
+++ b/app/views/managements/index.html.erb
@@ -1,6 +1,6 @@
 <div class="edit-window">
 
-  <%= render :partial => 'caretakers/form', :controller => @caretaker %>
+  <%= render :partial => 'caretakers/newct', :controller => @caretaker %>
 
 </div>
 
