--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,27 @@
 @import "bootstrap/bootstrap";
 @import "the-stroy/the-story";
 
+
+.form-control #expand-form
+{
+  width: 30%;
+}
+
+.management-window
+{
+  padding-left: 50px;
+}
+
+.expanderContent #new
+{
+  padding-left: 50px;
+}
+
+.navbar li a {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .edit-window {
   padding-top: 50px;
 }
@@ -56,7 +77,7 @@ body {
 
 #expand-form {
   height: 40px;
-  width: 70%;
+  width: 40%;
 }
 
 #flash_notice, #flash_alert {
