--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -40,7 +40,7 @@
             </li>
             <% if current_user.has_role? :admin %>
                 <li>
-                  <%= link_to 'Admin', users_path, :class => 'scroll brand-4' %>
+                  <!--<%= link_to 'Admin', users_path, :class => 'scroll brand-4' %>-->
                   <%= link_to 'Management', managements_path, :class => 'scroll brand-4' %>
                 </li>
             <% end %>
