--- a/app/views/managements/index.html.erb
+++ b/app/views/managements/index.html.erb
@@ -1,6 +1,7 @@
 <div class="edit-window">
 
   <%= render :partial => 'caretakers/newct', :controller => @caretaker %>
+  <%= render :partial => 'caretakers/updatect', :controller => @caretaker %>
 
 </div>
 
