--- a/app/views/caretakers/_form.html.erb
+++ b/app/views/caretakers/_form.html.erb
@@ -1,25 +1,31 @@
 
-<div class='edit-window'>
-<%= simple_form_for @caretaker, :url => {:action => 'create'} do |f| %>
-<%= f.error_notification %>
-<h4 class="expanderHead"><span class="expanderSign" style="cursor:pointer;">[+]</span> Update My Information</h4>
-<div class='expanderContent'>
-    <div class="form-inputs">
-      <%= f.input :first_name %>
-      <%= f.input :last_name %>
-      <%= f.input :email %>
-      <%= f.input :age %>
-      <%= f.input :nationality %>
-      <%= f.input :comment %>
-      <%= f.input :citizen %>
-      <%= f.input :car %>
-      <%= f.input :driver_license %>
-      <%= f.input :english %>
-    </div>
+<%= f.label :first_name %>
+<%= f.text_field :first_name, :autofocused => true, :class => 'form-control', :id => 'expand-form' %>
 
-    <div class="form-actions">
-      <%= f.button :submit %>
-    </div>
-</div>
-<% end %>
-</div>
+<%= f.label :last_name %>
+<%= f.text_field :last_name, :class => 'form-control', :id => 'expand-form' %>
+
+<%= f.label :email %>
+<%= f.text_field :email, :class => 'form-control', :id => 'expand-form', :required => false %>
+
+<%= f.label :age %>
+<%= f.text_field :age, :class => 'form-control', :id => 'expand-form', :required => false %>
+
+<%= f.label :nationality %>
+<%= f.text_field :nationality, :class => 'form-control', :id => 'expand-form', :required => false %>
+
+<%= f.label :comment %>
+<%= f.text_area :comment, :class => 'form-control', :id => 'expand-form', :required => false %>
+
+<br />
+<%= f.label "Citizen?" %>
+<%= f.check_box :citizen, {}, true, false %> <br />
+
+<%= f.label "Has A Car?" %>
+<%= f.check_box :car, {}, true, false %> <br />
+
+<%= f.label "Has Driver License?" %>
+<%= f.check_box :driver_license, {}, true,false %> <br />
+
+<%= f.label "English (1 = bad, 9 = fluent)"%>
+<%= f.select :english, 1..9%> <br />
