--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,13 +1,21 @@
 @import "bootstrap/bootstrap";
 @import "the-stroy/the-story";
 
+#updateExpanderHead
+{
+  width: 400px;
+  min-width: 150px;
+}
+
 
 .form-control #expand-form
 {
   width: 30%;
 }
 
-.management-window
+
+
+.expanderContent
 {
   padding-left: 50px;
 }
@@ -24,6 +32,7 @@
 
 .edit-window {
   padding-top: 50px;
+  padding-left: 75px;
 }
 
 .navbar-inverse {
@@ -40,6 +49,7 @@
 }
 .navbar-brand {
   color: #ffffff;
+  font-size: 33px;
 }
 
 body {
