--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="edit-window">
 
-  <%= simple_form_for(resource,:class =>"clickable", :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put, :class => 'form-expandable'}) do |f| %>
-  <h4 class="expanderHead"><span class="expanderSign" style="cursor:pointer;">[+]</span> Update My Information</h4>
+  <%= simple_form_for(resource,:class =>"clickable", :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}) do |f| %>
+  <h3 class="expanderHead"><span class="expanderSign" style="cursor:pointer;">[+]</span> Update My Information</h4>
   <div class="expanderContent">
         <%= f.error_notification %>
         <%= display_base_errors resource %>
@@ -26,12 +26,6 @@
   </div>
   <% end %>
 
-
-  <div class = 'form-expandable'>
-  <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => {:confirm => "Are you sure?"}, :method => :delete %>
-    .</p>
-  <%= link_to "Back", :back %>
-  </div>
 </div>
 
 <!-- expand and collaps -->
